src/app/home/header/header.component.scss
@import '../../shared/styles/colors.scss';

.header {
  background-color: $firefly;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  width: 100%;
  padding: 30px 80px;
}

@media (max-width: 768px) {
  .header {
    padding: 30px 40px;
  }
}

